<resources>
    <string name="app_name">EcoGreenPath</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="maps">Maps</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ecogreenpathlogo">EcoGreenPathLogo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="logo">this is our logo</string>
    <string name="paragraph1">We are a dedicated team of students from various universities in Indonesia, committed to promoting sustainable tourism and preserving the environment. Together, we aim to revolutionize the way people travel.\nOur team consists of : </string>
    <string name="bullet_text">•Tiara Puspita(ML) from Universitas Gunadarma\n•Ester Nunut Asihanna (ML) from Universitas Udayana\n•Farhan Syarif(CC) from Universitas Muslim Indonesia\n•Yunita Tri Indriani(CC) from Politeknik Negeri Batam\n•Azhar Mohammad R.(MD) from Universitas Muslim Indonesia\n•Rizal Rahmadani(MD) from Universitas Muslim Indonesia</string>
    <string name="paragraph2">Drawing from our diverse backgrounds in Machine Learning (ML), Cloud Computing (CC), and Mobile Development (MD), we combine our knowledge and skills to develop an innovative platform for eco-friendly travel.\nThrough the use of advanced technology and data analysis, we aim to provide personalized recommendations and seamless user experiences. Our goal is to make sustainable travel accessible, enjoyable, and impactful.\nWith a focus on promoting responsible tourism practices and raising awareness about environmental conservation, we aspire to inspire more people to travel sustainably and contribute to a better future.\nJoin us on this exciting journey as we create a platform that empowers travelers to explore the world while making a positive difference.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="donthavaacc">Don\'t Have an Account? Register Here</string>
    <string name="logout">Logout</string>
    <string name="loginHere">Already Have an Account? Login Here</string>
    <string name="birth_date">Birth Date</string>
    <string name="onboarding_text">Before start\nlets answer this few question</string>
    <string name="end_kuisioner">All Set\nLet\'s Go to the\nHomepage</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="profile">Profile</string>
    <string name="title_activity_choice">choice</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="quest_desc">The quest aims to promote reforestation, address deforestation, and raise awareness about the importance of trees in mitigating climate change, preserving biodiversity, and improving the environment. You got 100 point for 1 tree you plant</string>
    <string name="all_act_desc">Enjoy the glorious morning in the middle of vast rice fields, overlooking mount Batur and Mount Agung in the east, and Batukaru mountains on the west (Weather Permitting) with cool fresh morning breeze. Walking through beaten pathwas and pasing through our local farming areas, plantation and rice fields.</string>
    <string-array name="quest_title">
        <item>Tree Planting</item>
        <item></item>
    </string-array>


</resources>