<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutus.AboutUsFragment"
    android:background="@color/light_green_background">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="161dp"
        android:layout_height="266dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/text_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/font_color1"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/paragraph1"
        android:justificationMode="inter_word"
        android:textSize="15sp"
        android:textStyle="normal"
        android:lineSpacingExtra="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/bulletTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_bold"
        android:justificationMode="inter_word"
        android:textColor="@color/font_color1"
        android:text="@string/bullet_text"
        android:textSize="15sp"
        android:textStyle="normal"
        android:lineSpacingExtra="5sp"
        app:layout_constraintEnd_toEndOf="@+id/text_about_us"
        app:layout_constraintStart_toStartOf="@+id/text_about_us"
        app:layout_constraintTop_toBottomOf="@+id/text_about_us" />

    <TextView
        android:id="@+id/text_about_us_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:justificationMode="inter_word"
        android:textColor="@color/font_color1"
        android:text="@string/paragraph2"
        android:textSize="15sp"
        android:textStyle="normal"
        android:lineSpacingExtra="5sp"
        app:layout_constraintEnd_toEndOf="@+id/text_about_us"
        app:layout_constraintStart_toStartOf="@+id/text_about_us"
        app:layout_constraintTop_toBottomOf="@+id/bulletTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>